# fremwok

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README
assets/: CMakeLists.txt
assets/shaders/: TexturedQuad.frag  TexturedQuad.vert  shaders.conf
cmake/: FindCorrade.cmake  FindMagnum.cmake
src/: AppState.cpp  AppState.h  CMakeLists.txt  Drawable.h  Texture.cpp  Texture.h  TexturedQuadShader.cpp  TexturedQuadShader.h  Triangle.cpp  Triangle.h  main.cpp
